--- a/003_javaee/008_spring/006_事务.md
+++ b/003_javaee/008_spring/006_事务.md
@@ -39,16 +39,41 @@
 
 ## 隔离级别 isolation ##
 1. 隔离性问题(当多个线程都开启事务操作数据库中的数据时)
+	1. 3类数据读取问题
 		脏读:在一个事务中读取到另一个事务没有提交的数据
+![x](./img/transaction_1.jpg)
 		不可重复读:在一个事务中,两次查询的结果不一致(针对的update操作)
+![x](./img/transaction_2.jpg)
 		虚读(幻读):在一个事务中,两次查询的结果不一致(针对的insert操作)
+![x](./img/transaction_3.jpg)
+
+	2. 2类数据更新
+		1. 事务A撤销时，把已经提交的事务B的更新数据覆盖了。
+![x](./img/transaction_4.jpg)
+		2. 事务A覆盖事务B已经提交的数据，造成事务B所做的操作丢失。
+![x](./img/transaction_5.jpg)
+		
+	数据库通常会通过锁机制来解决数据并发访问问题，
+		按锁定对象不同可以分为表级锁和行级锁；
+		按并发事务锁定关系可以分为共享锁和独占锁，
+	直接使用锁是非常麻烦的，为此数据库为用户提供了自动锁机制,只要用户指定会话的事务隔离级别,数据库就会通过分析SQL语句然后为事务访问的资源加上合适的锁，此外，数据库还会维护这些锁通过各种手段提高系统的性能，这些对用户来说都是透明的（就是说你不用理解，事实上我确实也不知道）。ANSI/ISO SQL 92标准定义了4个等级的事务隔离级别
+		
 
 2. 隔离级别
-	* read_uncommited   读没有提交	上面三个问题都会发生
+	* read_uncommited   读没有提交	上面三个问题都会发生   
 	* read_commited	 	读提交		可以避免脏读
 	* repeatable_read	可以重复读	可以避免脏读+不可重复读(mysql 默认的事物隔离级别)
 	* serializable		序列化,串行化 所有问题可以避免,一个事务一个事务来(锁表)
 	
+| 隔离级别  |脏读|不可重复读|幻读|第一类丢失更新|第二类丢失更新|
+| ---	| :---: | :----:|
+|read_uncommited|y	|y	|y	|n	|y	|
+|read_commited	|n	|y	|y	|n	|y	|
+|repeatable_read|n	|n	|y	|n	|n	|
+|serializable	|n	|n	|n	|n	|n	|
+
+事务隔离级别越高并发性就越差
+
 3. 效率
 	read uncommitted>read committed>repeatable read>serializable
 4. 安全
