--- a/003_javaee/009_springMvc/004_注解.md
+++ b/003_javaee/009_springMvc/004_注解.md
@@ -60,6 +60,9 @@
 		public String method(@PathVariable("goods_id") Integer id){}
 
 
+# @RequestHeader() #
+1. controller方法 请求头获取参数
+
 
 ----------
 # json注解 #
