--- a/003_javaee/008_spring/003_aop.md
+++ b/003_javaee/008_spring/003_aop.md
@@ -17,7 +17,7 @@
 
 ----------
 
-----------
+----------	
 # 大纲 #
 	1. Spring aop的概述
 	2. aop原理(代理模式)
@@ -56,9 +56,18 @@
 # aop原理 #
 	1. 底层采用2种动态代理方式
 		* 基于jdk动态
-			* 必须接口
+			* 必须接口,JDK动态代理只能对实现了接口的类生成代理，而不能针对类
+			* jdk6、jdk7、jdk8逐步对JDK动态代理优化之后，在调用次数较少的情况下，JDK代理效率高于CGLIB代理效率
 		* 基于cglib动态代理
-			* 必须父类
+			* 必须能继承,CGLIB是针对类实现代理，主要是对指定的类生成一个子类，覆盖其中的方法
+			* 使用字节码技术生成代理类,效率会高一点
+	2. 将核心关注点与横切关注点完全隔离
+
+	1）如果目标对象实现了接口，默认情况下会采用JDK的动态代理实现AOP。
+	2）如果目标对象实现了接口，可以强制使用CGLIB实现AOP。
+	3）如果目标对象没有实现了接口，必须采用CGLIB库，Spring会自动在JDK动态代理和CGLIB之间转换。
+	
+	CGLib必须依赖于CGLib的类库
 
 ## 静态代理 ##
 [参考-web基础-项目优化-数据库连接池]
