--- a/005_linux/005_消息队列_mq/000_介绍.md
+++ b/005_linux/005_消息队列_mq/000_介绍.md
@@ -36,4 +36,33 @@
 
 
 
+----------
+# 消息丢失 #
+https://www.jianshu.com/p/4491cba335d1
+1. RabbitMQ 消息丢失
+	1. 生产者弄丢了数据
+		1. 可以选择用 RabbitMQ 提供的**事务功能**,就是生产者发送数据之前开启 RabbitMQ 事务channel.txSelect，然后发送消息，如果消息没有成功被 RabbitMQ 接收到，那么生产者会收到异常报错，此时就可以回滚事务channel.txRollback，然后重试发送消息；如果收到了消息，那么可以提交事务channel.txCommit
+		2. 但是问题是，RabbitMQ 事务机制（同步）一搞，基本上吞吐量会下来，因为太耗性能
+		3. 可以开启 **confirm** 模式，在生产者那里设置开启 confirm 模式之后，你每次写的消息都会分配一个唯一的 id，然后如果写入了 RabbitMQ 中，RabbitMQ 会给你回传一个 ack 消息，告诉你说这个消息 ok 了。如果 RabbitMQ 没能处理这个消息，会回调你的一个 nack 接口，告诉你这个消息接收失败，你可以重试。而且你可以结合这个机制自己在内存里维护每个消息 id 的状态，如果超过一定时间还没接收到这个消息的回调，那么你可以重发
+
+				事务机制是同步的，你提交一个事务之后会阻塞在那儿，但是 confirm 机制是异步的
+	2. RabbitMQ 弄丢了数据
+		1. 开启 RabbitMQ 的持久化
+	3. 消费端弄丢了数据
+		1. ack 机制 , 必须关闭 RabbitMQ 的自动 ack，可以通过一个 api 来调用就行
+
+2. Kafka 消息丢失
+	1. 生产者会不会弄丢数据
+	2.  Kafka 弄丢了数据
+		* 给 topic 设置 replication.factor 参数：这个值必须大于 1，要求每个 partition 必须有至少** 2 个副本**。
+		* 在 Kafka 服务端设置 min.insync.replicas 参数：这个值必须大于 1，这个是要求一个 leader 至少感知到有至少一个 follower 还跟自己保持联系，没掉队，这样才能确保 leader 挂了还有一个 follower 吧。
+		* 在 producer 端设置 acks=all：这个是要求每条数据，必须是写入所有 replica 之后，才能认为是写成功了。
+		* 在 producer 端设置 retries=MAX（很大很大很大的一个值，无限次重试的意思）：这个是要求一旦写入失败，就无限重试，卡在这里了。
+	3. 消费者
+		1. 费者那边自动提交了 offset,让 Kafka 以为你已经消费好了这个消息
+		2. 只要关闭自动提交 offset，在处理完之后自己手动提交 offset，就可以保证数据不会丢
+		3. 但是此时确实还是可能会有重复消费，比如你刚处理完，还没提交 offset，结果自己挂了，此时肯定会重复消费一次，自己保证**幂等性**就好了
+
+
+
 
