--- a/001_javase/006_设计模式/001_工厂模式.md
+++ b/001_javase/006_设计模式/001_工厂模式.md
@@ -6,8 +6,8 @@
 		2. 工厂 直接 负者 产品
 		3. 工厂方法 特例
 	3. 构成
-		1. 一个接口/父类
-		2. 几个具体实现类
+		1. 一个接口/父类  产品
+		2. 几个具体实现类 产品
 		3. 一个静态方法 create,通过传递的参数 ,选择 对应 new 子类
 		4. 最终静态方法 返回抽象类/接口类型
 	4. 特点
