--- a/003_javaee/007_mybatis/003_动态sql.md
+++ b/003_javaee/007_mybatis/003_动态sql.md
@@ -208,7 +208,7 @@
 		* 自动去除
 
 ----------
-## foreach标签 ##
+## foreach标签 (可以嵌套!)##
 1. 问题
 	* 批量删除,查找的时候,参数是一个数组或者集合
 	* int[] ids = {1,2,3};
@@ -251,7 +251,7 @@
 			}
 
 ----------
-
+	* 当参数是ArrayList时候
 		1. 当参数是ArrayList时候
 			 <select id="selectByIds"  parameterType="java.util.ArrayList" resultType="hxUser">
 				select * from hxuser 
@@ -302,3 +302,8 @@
 					</if>
 				</where>
 			</select> 
+	* 当 map集合的 时候 ,,,一定要在 接口的 抽象方法上添加别名  @Param(myMap)
+		* sql 遍历的时候 
+			* myMap.keys
+			* myMap.values
+
