--- a/003_javaee/008_spring/006_事务.md
+++ b/003_javaee/008_spring/006_事务.md
@@ -298,3 +298,20 @@
 |rollbackForClassName|类名数组，必须继承自Throwable|导致事务回滚的异常类名字数组|
 |noRollbackFor|Class对象数组，必须继承自Throwable|不会导致事务回滚的异常类数组|
 |noRollbackForClassName|类名数组，必须继承自Throwable|不会导致事务回滚的异常类名字数组|
+
+
+# 默认  rollbackFor #
+1. 默认rollbackFor, 注解值是 {}空字符串数组
+2. super.rollbackOn(ex)
+3. 所以 是  RuntimeException和 Error
+
+```
+public boolean rollbackOn(Throwable ex) {
+	return (ex instanceof RuntimeException || ex instanceof Error);
+
+```
+
+
+
+
+
