--- a/003_javaee/007_mybatis/004_关联查询.md
+++ b/003_javaee/007_mybatis/004_关联查询.md
@@ -81,12 +81,15 @@
 							* column 	表的列名(一定是查询后结果的列名,如果select起了别名,就应该用别名)
 							* property  bean的属性名
 						result	:普通字段的映射
-							
+						constructor	:  指定哪个构造函数
+							arg cloumn  javaType
 						association	: 联系:指定关联的一方 ,就是外键指向的类
 							* property: bean中属性类的变量名
 							* javaType: 指定当前bean中属性类的型
 							* 关联里面也要一一指定
 							* 将关联查询信息映射到pojo对象中的属性类中。
+
+						* select="sqlId"
 						 -->	
 						<resultMap type="hxStudent" id="baseResultMap">
 							<id column="id" property="id"/>
@@ -125,6 +128,9 @@
 					collection	:集合,指定关联的一方
 						* property bean属性名
 						* ofType   lists集合的泛型类型	 ,com.huaxin.bean.HxStudent 可以用别名
+						* column	一方表单 id 可以省略
+					select="sqlId"  // 直接指向sql  子查询 效率表 关联查询差,但是能延迟加载
+
 				 -->
 				<collection property="hxStudents" ofType="hxStudent" > 
 					<id column="id" property="id"/>
@@ -143,3 +149,32 @@
 					HxClass selectById = mapper.selectById(1);
 					System.out.println(selectById);
 				}
+
+
+# 延迟加载 #
+1. resultMap可以实现高级映射（使用association、collection实现一对一及一对多映射），association、collection具备延迟加载功能。resultType无法实现延迟加载。
+2. 延迟加载：先从单表查询、需要时再从关联表去关联查询，大大提高 数据库性能，因为查询单表要比关联查询多张表速度要快。
+3. 加载方式 resultMap
+		 <association property="user"  javaType="cn.itcast.mybatis.po.User"
+         select="cn.itcast.mybatis.mapper.UserMapper.findUserById" column="user_id" >
+4. 核心文件 延迟加载配置 
+	1. lazyLoadingEnabled	全局性设置懒加载。默认设为‘false’,所有关联的都会被初始化加载。
+	2. aggressiveLazyLoading	true 懒加载的对象可能被任何懒属性全部加载。false，每个属性都按需加载,默认 true
+			aggressiveLazyLoading
+			     侵略性 lazy loading 开关, 默认为true, 这个属性比较搞笑,如果为true则当你访问任何一个属性都会加载所有的其他lazy load属性,即使你根本没有调用哪个lazy load属性,说白了就是aggressiveLazyLoading=true,则lazy load等于没用,所以要使用lazy load还是将其设为false
+
+
+```xml
+	<!-- 全局配置参数，需要时再设置 -->
+	<settings>
+	    <!-- 打开延迟加载 的开关 -->
+	    <setting name="lazyLoadingEnabled" value="true"/>
+	    <!-- 将积极加载改为消极加载即按需要加载 -->
+	    <setting name="aggressiveLazyLoading" value="false"/>
+	    <!-- 二级缓冲 -->
+		<setting name="cacheEnabled" value="true"/>
+	</settings>
+```
+
+
+
