--- a/003_javaee/008_spring/003_aop.md
+++ b/003_javaee/008_spring/003_aop.md
@@ -69,6 +69,24 @@
 	
 	CGLib必须依赖于CGLib的类库
 
+1.代理模式。
+	比如A对象要做一件事情，在没有代理前，自己来做，在对A代理后，由A的代理类B来做。代理其实是在原实例前后加了一层处理
+2.静态代理原理及实践。
+	代理对象的一个接口只服务于一种类型的对象，如果要代理的方法很多，势必要为每一种方法都进行代理
+	如果增加一个方法，除了实现类需要实现这个方法外，所有的代理类也要实现此方法
+3.动态代理原理及实践。
+	* JDK动态生成了一个类去实现接口,隐藏了这个过程  class $jdkProxy implements IUserDao{}
+	* Cglib是以动态生成的子类继承目标的方式实现，在运行期动态的在内存中构建一个子类 public class $Cglib_Proxy_class  extends UserDao{}
+4.Spring AOP原理及实战。
+	1.创建容器对象的时候，根据切入点表达式拦截的类，生成代理对象。
+	2.如果目标对象有实现接口，使用jdk代理。如果目标对象没有实现接口，则使用Cglib代理。然后从容器获取代理后的对象，在运行期植入"切面"类的方法。通过查看Spring源码，我们在DefaultAopProxyFactory类中，找到这样一段话
+5. 能做什么
+	1.  Spring声明式事务管理配置
+	2.  Controller层的参数校验
+	3.  对部分函数的调用进行日志记录
+	4.  信息过滤
+
+
 ## 静态代理 ##
 [参考-web基础-项目优化-数据库连接池]
 
@@ -164,7 +182,8 @@
 	2. Pointcut(切入点)		-- 所谓切入点是指我们要对哪些Joinpoint进行拦截的定义
 		* UserServiceImpl实现类中的某些已经被增强的方法
 		* 需要配置,告诉哪些是的
-	3. Advice(通知/增强)	-- 所谓通知是指拦截到Joinpoint之后所要做的事情就是通知.通知分为前置通知,后置通知,异常通知,最终通知,环绕通知(切面要完成的功能)
+	3. Advice(通知/增强)	-- 所谓通知是指拦截到Joinpoint之后所要做的事情就是通知
+		1. 通知分为前置通知,后置通知,异常通知,最终通知,环绕通知(切面要完成的功能)
 		* 一个类里面的一个增强方法,
 		* 自己编写
 		* 具体增强的代码:日志,事务
@@ -178,9 +197,24 @@
 	7. Aspect(切面)		-- 是切入点和通知的结合，以后咱们自己来编写和配置的
 		* 切入点(配置)+通知(方法)
 	8. Introduction(引介)	-- 引介是一种特殊的通知在不修改类代码的前提下, Introduction可以在运行期为类动态地添加一些方法或Field
-
-
-
+	
+	9. advisor 顾问
+		1. 和通知类似,是一个织入方式,d实际上是advice的封装
+		2. 可以动态的将切面指定对应切入点
+		3. advisor接口
+			1. PrototypePlaceholderAdviser
+			2. IntroductionAdvisor
+			3. PointcutAdvisor 
+				1. advice
+				2. pointcut 接口
+					1. classFilter 接口	: aop cglib 两个
+						1. matches		(Class)->boolean
+					2. methodMatcher 接口
+						1. matches		(Method,Class)->boolean
+							1. 静态匹配方式,之更具方法的名称判断
+						2. isRuntime
+						3. matches		(Method,Class,Object)->boolean
+	
 ![x](./img/003_AOP.bmp)
 
 
@@ -287,6 +321,11 @@
 		* 在目标类的方法执行之前执行。
 		* 配置文件信息：<aop:before method="before" pointcut-ref="myPointcut"/>
 		* 应用：可以对方法的参数来做校验
+		* 接口MethodBeforeAdvice		before方法
+			* 注册通知实现类 xml
+			* ProxyFactoryBean		代理对象工厂
+				* targetName
+				* interceptorNames
 	
 	2. 最终通知
 		* 在目标类的方法执行之后执行，如果程序出现了异常，最终通知也会执行。
