--- a/003_javaee/008_spring/003_aop.md
+++ b/003_javaee/008_spring/003_aop.md
@@ -45,7 +45,9 @@
 	
 ![模块化](./img/spring03.png)
 
-
+# oop #/
+1. 面向对象 变成
+2. 继承方式,解决纵向代码重复
 
 ----------
 
@@ -143,7 +145,7 @@
 	
 				// 方法执行,触发
 				@Override
-				public Object intercept(Object obj, Method method, Object[] args,
+				public Object intercept(Object target, Method method, Object[] args,
 						MethodProxy methodProxy) throws Throwable {
 					// 方法增强
 					String name = method.getName();
@@ -152,7 +154,7 @@
 						// 开启事务
 					} 
 					// 正常执行
-					return methodProxy.invokeSuper(obj, args);
+					return methodProxy.invokeSuper(target, args);
 				}
 			});
 			/** 第四步： 生成代理对象 **/
@@ -188,6 +190,7 @@
 		* 自己编写
 		* 具体增强的代码:日志,事务
 		* eg:需要在add方法执行前打印日志,需要有这个通知类对象
+		* 只能对当前接口下所有的实现类 进行次要业务绑定,无法动态指定
 	4. Target(目标对象)		-- 代理的目标对象
 	5. Weaving(织入)		-- 是指把增强应用到目标对象来创建新的代理对象的过程
 		* 动态生成代理对象的过程
@@ -198,8 +201,11 @@
 		* 切入点(配置)+通知(方法)
 	8. Introduction(引介)	-- 引介是一种特殊的通知在不修改类代码的前提下, Introduction可以在运行期为类动态地添加一些方法或Field
 	
-	9. advisor 顾问
+	9. advisor 顾问,通知器
 		1. 和通知类似,是一个织入方式,d实际上是advice的封装
+			1. 实现advice接口
+				1. 前置通知	MethodBeforeAdvice
+				2. ...
 		2. 可以动态的将切面指定对应切入点
 		3. advisor接口
 			1. PrototypePlaceholderAdviser
@@ -214,7 +220,7 @@
 							1. 静态匹配方式,之更具方法的名称判断
 						2. isRuntime
 						3. matches		(Method,Class,Object)->boolean
-	
+		4. 
 ![x](./img/003_AOP.bmp)
 
 
@@ -286,7 +292,10 @@
 				<!-- 前置通知: add方法前执行 -->
 				<aop:before method="log" pointcut-ref="xx"/>
 				<aop:pointcut id="xx" expression="execution( * *..*.AopServiceImpl.add*(..))" />
+
+				<aop:after method="log2" pointcut-ref="xx"/>
 			</aop:aspect>
+
 		</aop:config>
 
 
@@ -329,7 +338,8 @@
 	
 	2. 最终通知
 		* 在目标类的方法执行之后执行，如果程序出现了异常，最终通知也会执行。
-		* 在配置文件中编写具体的配置：<aop:after method="after" pointcut-ref="myPointcut"/>
+		* 在配置文件中编写具体的配置：<aop:aft
+		* er method="after" pointcut-ref="myPointcut"/>
 		* 应用：例如像释放资源
 	
 	3. 后置通知
@@ -366,3 +376,25 @@
 
 
 	 HttpServletRequest request = ((ServletRequestAttributes)org.springframework.web.context.request.RequestContextHolder.getRequestAttributes()).getRequest();  
+
+1.ContextNameSpaceHandler
+
+2. spring aop 下面
+	1. META-INFO/spring.handlers	
+		* AopNamespaceHandler
+		* 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
