--- a/003_javaee/008_spring/006_事务.md
+++ b/003_javaee/008_spring/006_事务.md
@@ -42,9 +42,9 @@
 	1. 3类数据读取问题
 		脏读:在一个事务中读取到另一个事务没有提交的数据
 ![x](./img/transaction_1.jpg)
-		不可重复读:在一个事务中,两次查询的结果不一致(针对的update操作)
+		不可重复读:在一个事务中,两次查询(同一行)的结果不一致(针对的update操作)
 ![x](./img/transaction_2.jpg)
-		虚读(幻读):在一个事务中,两次查询的结果不一致(针对的insert操作)
+		虚读(幻读):在一个事务中,两次查询(同一个表)的结果不一致(针对的insert操作)
 ![x](./img/transaction_3.jpg)
 
 	2. 2类数据更新
