--- a/003_javaee/009_springMvc/002_ssm_整合.md
+++ b/003_javaee/009_springMvc/002_ssm_整合.md
@@ -171,6 +171,7 @@ applicationContext-xxx.xml 才能出现提示!!!
 		</bean>
 		<!-- 扫描接口 -->
 		<bean class="org.mybatis.spring.mapper.MapperScannerConfigurer">
+			<!-- 不能配置sqlSessionFactory 可以配置 sqlSessionFactoryBeanName -->
 			<property name="basePackage" value="com.huaxin.ssm.mapper"></property>
 		</bean>
 
