--- a/003_javaee/009_springMvc/003_ssm_请求参数绑定.md
+++ b/003_javaee/009_springMvc/003_ssm_请求参数绑定.md
@@ -1,8 +1,20 @@
 # 参数类型 #
 1. 默认支持类型
-2. 基本类型 + string
+	1. HttpServletRequest
+	2. HttpServletResponse
+	3. HttpSession
+	4. Model  /  ModelMap	/ModelAndView
+2. 基本类型 + string  简单参数绑定
+	1. 请求参数key,自动绑定到 controller 中handler 方法的形参上面相同key
+		1. 直接绑定: 请求参数key和方法形参名字一致
+		2. 注解绑定: 不一致,@RequestParam("itemid") 	
+			1. value
+			2. required
+			3. defaultValue
 3. bean  
+	1. 要求pojo对象中的属性名和表单中input的name属性一致
 4. 日期:自定义转换器
+	1. 由于日期数据有很多种格式，所以springmvc没办法把字符串转换成统一的日期类型
 
 
 # 准备环境 #
@@ -520,3 +532,5 @@
 			model.addAttribute("img", "http://localhost:80/files/" + newFileName);
 			return "showFile";
 		}
+
+
