--- a/003_javaee/009_springMvc/004_注解.md
+++ b/003_javaee/009_springMvc/004_注解.md
@@ -1,3 +1,9 @@
+# @RequestParam  #
+1.  注解绑定: 不一致,@RequestParam("itemid") 	
+	1. value
+	2. required
+	3. defaultValue
+
 # @RequestMapping #
 1. url路径
 	* 作用在方法上面,作为外界请求路径
