--- a/003_javaee/009_springMvc/003_ssm_请求参数绑定.md
+++ b/003_javaee/009_springMvc/003_ssm_请求参数绑定.md
@@ -4,6 +4,12 @@
 	2. HttpServletResponse
 	3. HttpSession
 	4. Model  /  ModelMap	/ModelAndView
+		1. ModelMap继承自LinkedHashMap
+		2. Model是一个接口
+		3. 它们的底层实现都是同一个类（BindingAwareModelMap）,作用就是向页面传递数据,相当于Request的作用
+		4. model.addAttribute("item", item);
+	5. InputStream、OutputStream
+	6. Reader、Writer
 2. 基本类型 + string  简单参数绑定
 	1. 请求参数key,自动绑定到 controller 中handler 方法的形参上面相同key
 		1. 直接绑定: 请求参数key和方法形参名字一致
