--- a/003_javaee/009_springMvc/004_注解.md
+++ b/003_javaee/009_springMvc/004_注解.md
@@ -2,7 +2,12 @@
 1.  注解绑定: 不一致,@RequestParam("itemid") 	
 	1. value
 	2. required
+		1. 默认是true
+		2. TTP Status 400 - Required Integer parameter 'XXXX' is not present
 	3. defaultValue
+2. 默认内置了24种参数解析组件（ArgumentResolver）,将参数类型转换,然后绑定到方法形参上
+	1. 
+
 
 # @RequestMapping #
 1. url路径
@@ -81,6 +86,14 @@
 2. @ResponseBody
 		1. 将Controller的方法返回的对象,通过Response响应给客户端
 			* 方法返回对象转换为json响应给客户端
+		2. 消息转换器
+			1. 注解可以通过内置的9种HttpMessageConverter，匹配不同的Controller返回值类型
+			2. 常用的HttpMessageConverter
+				1. MappingJacksonHttpMessageConverter	处理POJO类型返回值
+					1. Content-Type设置为application/json；charset=utf-8
+				2. StringHttpMessageConverter处理String类型返回值
+					1. Content-Type设置为text/plain；charset=utf-8
+
 3. 开发
 	1. 导包 (必须配置 注解驱动,否则报错 406!)
 		jackson.jar
@@ -89,11 +102,13 @@
 		       <artifactId>jackson-core</artifactId>
 		       <version>2.7.0</version>
 		     </dependency>
+	
 		     <dependency>
 		       <groupId>com.fasterxml.jackson.core</groupId>
 		       <artifactId>jackson-databind</artifactId>
 		       <version>2.7.0</version>
 		     </dependency>
+
 		     <dependency>
 		       <groupId>com.fasterxml.jackson.core</groupId>
 		       <artifactId>jackson-annotations</artifactId>
