--- a/003_javaee/009_springMvc/006_拦截器.md
+++ b/003_javaee/009_springMvc/006_拦截器.md
@@ -31,9 +31,12 @@
 					}
 				}
 		2. 配置拦截器,让其生效
+*** 如果有多个拦截器，一定要把处理跨域请求的拦截器放到首位。
 				<!--拦截器 -->
 				<mvc:interceptors>
-					<!--多个拦截器,顺序执行 -->
+					<!-- 公共拦截器可以拦截所有请求,而且可以有多个 -->
+					<bean class="com.huaxin.ssm.web.interceptor.MyFisrtInterceptor"></bean>
+					<!--多个特定url拦截器,顺序执行 -->
 					<mvc:interceptor>
 						<mvc:mapping path="/**"/>
 						<bean class="com.huaxin.ssm.web.interceptor.MyFisrtInterceptor"></bean>
